# FastAPI_Assignment

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/address_book_api/: run.py
src/address_book_api/api/: api_router.py
src/address_book_api/api/routes/: address_book.py
src/address_book_api/db/: db.py
src/address_book_api/db/repository/: address_repository.py
src/address_book_api/models/: address.py
src/address_book_api/schema/: address.py
src/address_book_api/service/: address.py
src/resources/: constants.py
